--- a/src/main/resources/assets/magic-and-things/lang/en_us.json
+++ b/src/main/resources/assets/magic-and-things/lang/en_us.json
@@ -1,5 +1,6 @@
 {
     "key.category.whsmgc.mgc": "WHS Magic and Things",
     "key.whsmgc.remove_mana": "Remove Mana",
-    "key.whsmgc.add_mana_level": "Add Mana Level"
+    "key.whsmgc.add_mana_level": "Add Mana Level",
+    "key.whsmgc.remove_mana_level": "Remove Mana Level"
 }
